Upload goes to showview, still working on drawview

--- a/handrighting/Base.lproj/Main.storyboard
+++ b/handrighting/Base.lproj/Main.storyboard
@@ -103,12 +103,17 @@
                             </connections>
                         </barButtonItem>
                         <rightBarButtonItems>
-                            <barButtonItem id="lNd-GU-0XY"/>
+                            <barButtonItem id="lNd-GU-0XY">
+                                <connections>
+                                    <segue destination="yfu-Pp-M7d" kind="show" id="hGd-4y-uqK"/>
+                                </connections>
+                            </barButtonItem>
                             <barButtonItem systemItem="save" id="tJU-RF-drJ"/>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="drawView" destination="BIg-6f-W6w" id="PeT-yk-9Vb"/>
+                        <outlet property="saveButton" destination="lNd-GU-0XY" id="fk5-f8-T45"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A1a-y7-EAd" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -186,7 +191,11 @@
                                 <action selector="cancelButton:" destination="BYZ-38-t0r" id="6Nq-Vn-U7R"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Gjh-xy-fPZ"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Gjh-xy-fPZ">
+                            <connections>
+                                <segue destination="AjA-6v-tok" kind="show" id="0rJ-PC-qCM"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="imageNameLabel" destination="de7-FP-Fq3" id="GVU-LY-kbO"/>
@@ -205,6 +214,66 @@
                 </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1801" y="-150"/>
+        </scene>
+        <!--Show View Controller-->
+        <scene sceneID="bBv-YG-Z39">
+            <objects>
+                <viewController id="yfu-Pp-M7d" customClass="ShowViewController" customModule="handrighting" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G5H-gP-PgR"/>
+                        <viewControllerLayoutGuide type="bottom" id="HAh-ot-Psc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Gqc-Aq-qHB">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="top" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="g4M-Li-Bmq">
+                                <rect key="frame" x="20" y="104" width="560" height="421"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Image Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dSA-rJ-nGC">
+                                        <rect key="frame" x="0.0" y="0.0" width="97" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Image Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZnG-bf-Fk1">
+                                        <rect key="frame" x="0.0" y="61" width="84" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" placeholderIntrinsicWidth="300" placeholderIntrinsicHeight="300" translatesAutoresizingMaskIntoConstraints="NO" id="laY-fW-jLG">
+                                        <rect key="frame" x="0.0" y="121" width="300" height="300"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="laY-fW-jLG" secondAttribute="height" multiplier="1:1" id="H9P-Ts-Peu"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="g4M-Li-Bmq" secondAttribute="trailing" id="4Ey-5L-aog"/>
+                            <constraint firstItem="g4M-Li-Bmq" firstAttribute="top" secondItem="G5H-gP-PgR" secondAttribute="bottom" constant="40" id="9Qb-fq-Knf"/>
+                            <constraint firstItem="g4M-Li-Bmq" firstAttribute="leading" secondItem="Gqc-Aq-qHB" secondAttribute="leadingMargin" id="CBY-P1-6Hv"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="04W-4g-M6k">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="CBe-pr-iIt">
+                            <connections>
+                                <segue destination="Rjy-DB-ACo" kind="show" id="4nM-f6-zaK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageNameLabel" destination="dSA-rJ-nGC" id="e6D-E7-Wxp"/>
+                        <outlet property="imageTextLabel" destination="ZnG-bf-Fk1" id="wUq-Vd-zSm"/>
+                        <outlet property="photoImageView" destination="laY-fW-jLG" id="PCX-iB-bNZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5zD-yR-MHl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3675" y="314"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ojH-hG-Bs6">
@@ -260,8 +329,29 @@
             </objects>
             <point key="canvasLocation" x="999" y="741"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="1gu-qw-MpD">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AjA-6v-tok" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JSf-OO-pJW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="yfu-Pp-M7d" kind="relationship" relationship="rootViewController" id="Rxf-Ud-C90"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8BD-qU-Q0g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2707" y="314"/>
+        </scene>
     </scenes>
     <resources>
         <image name="defaultPhoto" width="540" height="540"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="hGd-4y-uqK"/>
+    </inferredMetricsTieBreakers>
 </document>
